Fix background and content being cut off on phones

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,11 +19,13 @@ html {
   background-repeat: no-repeat;
   background-position: center;
   min-height: 100%;
+  min-width: min-content;
 }
 
 body {
   margin: 0 auto;
   width: 100%;
+  height: 100%;
   max-width: 120ch;
   padding: 1rem;
   line-height: 1.5;
